# herdr-slackr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  herdr-plugin.toml  justfile
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-12-agent-cli.md  2026-07-12-herdr-slackr.md  2026-07-12-nav-ux.md  2026-07-12-rate-limits.md  2026-07-12-threads-view.md  2026-07-13-focus-and-fixes.md  2026-07-23-sidebar-badge.md  2026-07-24-status-hygiene.md
docs/superpowers/specs/: 2026-07-12-agent-cli-design.md  2026-07-12-herdr-slackr-design.md  2026-07-12-nav-and-threads-ux-design.md  2026-07-12-rate-limit-hardening-design.md  2026-07-12-threads-and-colors-design.md  2026-07-13-focus-and-fixes-design.md  2026-07-23-sidebar-badge-design.md  2026-07-24-status-hygiene-design.md
herdr/: install.sh  sidebar.sh
skills/herdr-slackr/: SKILL.md
specs/: agent-cli.md  config.md  overview.md  pane.md  slack-host.md
src/: app.rs  browser.rs  cli.rs  config.rs  emoji.rs  entities.rs  herdr_meta.rs  lib.rs  log.rs  main.rs  model.rs  proc.rs  rest.rs  socket.rs  theme.rs  tokens.rs  ui.rs  users_cache.rs
tests/: agent_cli.rs  render.rs  smoke.rs
