[package]
name = "herdr-slackr"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "A herdr-native Slack feed pane: watch channels and threads, in the terminal."
license = "MIT"
repository = "https://github.com/dcieslak19973/herdr-slackr"
keywords = ["herdr", "tui", "slack", "chat"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
ratatui = "0.30"
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"
tungstenite = "0.30"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-native-certs = "0.8"
webpki-roots = "1.0"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pragmatic allows for an application binary (vs a public library):
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
too_many_lines = "allow"

[profile.release]
strip = true
lto = "thin"
